--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 data/
+# Node/React
+frontend/node_modules
+frontend/build
+
+# Python/Flask (if backend is Python)
+backend/__pycache__/
+backend/env/
+backend/*.pyc
+
+# VSCode / system files
+.vscode/
+.DS_Store
